examples/lexer/bad/07_unclosed_string.sg
// Ошибка: незакрытая строка
fn test_string() -> string {
    let message:string = "Hello world;  // незакрытая строка
    return message;
}
